// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderTopColor renders 0 1`] = `
Array [
  .c0 {
  border-top-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopColor renders function 1`] = `
Array [
  .c0 {
  border-top-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopColor renders invalid theme path 1`] = `
Array [
  .c0 {
  border-top-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopColor renders negative number 1`] = `
Array [
  .c0 {
  border-top-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-top-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-top-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-top-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-top-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopColor renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-top-color: July;
  }
}

@media April {
  .c0 {
    border-top-color: August;
  }
}

@media January {
  .c0 {
    border-top-color: September;
  }
}

@media April {
  .c0 {
    border-top-color: November;
  }
}

@media June {
  .c0 {
    border-top-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-top-color: July;
  }
}

@media April {
  .c0 {
    border-top-color: August;
  }
}

@media January {
  .c0 {
    border-top-color: September;
  }
}

@media April {
  .c0 {
    border-top-color: November;
  }
}

@media June {
  .c0 {
    border-top-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-top-color: January;
  }
}

@media April {
  .c0 {
    border-top-color: December;
  }
}

@media January {
  .c0 {
    border-top-color: April;
  }
}

@media April {
  .c0 {
    border-top-color: May;
  }
}

@media June {
  .c0 {
    border-top-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-top-color: January;
  }
}

@media April {
  .c0 {
    border-top-color: December;
  }
}

@media January {
  .c0 {
    border-top-color: April;
  }
}

@media April {
  .c0 {
    border-top-color: May;
  }
}

@media June {
  .c0 {
    border-top-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopColor renders postitive number 1`] = `
Array [
  .c0 {
  border-top-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopColor renders string 1`] = `
Array [
  .c0 {
  border-top-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopColor renders valid theme path 1`] = `
Array [
  .c0 {
  border-top-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
